Fixed padding and overflow

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -6,7 +6,7 @@
     grid-column-start: 1;
     grid-row-start: 1;
     transform: translateY(20%) scale(0.84) !important;
-    filter: brightness(0.2) !important;
+    filter: brightness(0.4) !important;
     z-index: 1;
     width: 100%;
     opacity: 1;
@@ -14,7 +14,7 @@
   
   .stack > *:nth-child(2) {
     transform: translateY(10%) scale(0.92) !important;
-    filter: brightness(0.6) !important;
+    filter: brightness(0.7) !important;
     z-index: 2;
     opacity: 1;
   }
